# ml4sci2025

./: pyproject.toml
src/deeplense/: dataset.py  diffusion_training.py  loss.py  models.py  sr_training.py  training.py
src/falcon/: attention.py  dataset.py  models.py  utils.py
src/genie/: data_ops.py  dataset.py  models.py
